--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3002",
+    "dev": "next dev --turbopack -p 3000",
     "build": "next build",
-    "start": "next start -p 3002",
-    "devhttps": "next dev --port 3002 --experimental-https",
+    "start": "next start -p 3000",
+    "devhttps": "next dev --port 3000 --experimental-https",
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.11.0",
     "cross-env": "^7.0.3",
+    "js-cookie": "^3.0.5",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
