--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start -p 3000",
-    "devhttps": "next dev --port 3000 --experimental-https",
+    "start": "next start -p 3002",
+    "start:stage": "cross-env ENV=stage next start -p 3002",
+    "start:prod": "cross-env ENV=prod next start -p 3002",
+    "devhttps": "next dev --port 3002 --experimental-https",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,7 +19,8 @@
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
